tags in the jstl fmt library, so please refer to the documentation for that
standard if you still have questions after reading this document or online help.

Unlike the fmt tags which work with java.util.Date and java.util.TimeZone objects,
the Joda tags work with Joda DateTime, ReadableInstant, ReadablePartial,
and DateTimeZone objects.  


Changes since 1.0.1
-------------------
Changed maven definition for servlet jars [1841568]


Changes since 1.0
-----------------
Fix missing directory tag in project.xml [1827409]


Build
-----
Build-time dependencies are Joda 1.0 or later, the Servlet 2.4 API, the
JSP 2.0 API, and JSTL 1.1 API. A source build can be achieved from ant or maven.


Setup
-----
You'll need a servlet container which supports Servlet 2.4, JSP 2.0, JSTL 1.1.
Copy the joda-time-1.2.jar and joda-time-tags.jar to the WEB-INF/lib directory of
your web application.  Declare the library as follows in your jsp pages:

<%@taglib prefix="joda" uri="http://www.joda.org/joda/time/tags"%>


Tags
----
FORMAT.  

Example: 
  <% pageContext.setAttribute("now", new org.joda.time.DateTime()); %>
  <joda:format value="${now}" style="SM"/>

Formats ReadableInstant (including DateTime) and ReadablePartial (including LocalDateTime, LocalDate and LocalTime) objects.
The var and scope attributes can be used to set the value of a variable instead of printing the result.
The time zone may be specified using an attribute, en enclosing <joda:dateTimeZone/> tag,
preceding <joda:timeZone/> tag, or via the "org.joda.time.dateTimeZone" scoped variable.

Attributes:

value (required).  Must be a ReadableInstant or ReadablePartial.
var.  The scoped variable to set.
scope.  The scope of the variable to set.
locale.  The locale to use for formatting.
style.  The style to use for formatting (see Joda format documentation for recognized style strings)
pattern.  The pattern to use for formatting (see Joda format documentation for recognized pattern strings)