@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--build.xml generated by maven from project.xml version 1.0.1
-  on date November 14 2007, time 2326-->
+<!--build.xml generated by maven from project.xml version 1.0.2
+  on date March 15 2008, time 1143-->
 
 <project default="jar" name="joda-time-jsptags" basedir=".">
   <property name="defaulttargetdir" value="target">
@@ -16,7 +16,7 @@
   </property>
   <property name="javadocdir" value="dist/docs/api">
   </property>
-  <property name="final.name" value="joda-time-jsptags-1.0.1">
+  <property name="final.name" value="joda-time-jsptags-1.0.2">
   </property>
   <path id="build.classpath">
     <fileset dir="${libdir}">
@@ -47,6 +47,12 @@
       <classpath refid="build.classpath">
       </classpath>
     </javac>
+    <copy todir="${classesdir}">
+      <fileset dir="src/java">
+        <include name="**/*.properties">
+        </include>
+      </fileset>
+    </copy>
     <mkdir dir="${classesdir}/META-INF">
     </mkdir>
     <copy todir="${classesdir}/META-INF">
@@ -106,7 +112,7 @@
     </tstamp>
     <property name="copyright" value="Copyright &amp;copy;  Joda.org. All Rights Reserved.">
     </property>
-    <property name="title" value="Joda time JSP tags support 1.0.1 API">
+    <property name="title" value="Joda time JSP tags support 1.0.2 API">
     </property>
     <javadoc use="true" private="true" destdir="${javadocdir}" author="true" version="true" sourcepath="src/java" packagenames="org.joda.time.contrib.jsptag.*">
       <classpath>
@@ -122,11 +128,11 @@
     </setproxy>
     <get dest="${libdir}/joda-time-1.5.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/joda-time/jars/joda-time-1.5.jar">
     </get>
-    <get dest="${libdir}/servlet-api-2.4.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/servletapi/jars/servlet-api-2.4.jar">
+    <get dest="${libdir}/servlet-api-2.4.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/javax.servlet/jars/servlet-api-2.4.jar">
     </get>
-    <get dest="${libdir}/jsp-api-2.0.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/jspapi/jars/jsp-api-2.0.jar">
+    <get dest="${libdir}/jsp-api-2.0.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/javax.servlet/jars/jsp-api-2.0.jar">
     </get>
-    <get dest="${libdir}/jstl-1.1.2.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/jstl/jars/jstl-1.1.2.jar">
+    <get dest="${libdir}/jstl-1.1.2.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/javax.servlet/jars/jstl-1.1.2.jar">
     </get>
   </target>
   <target name="install-maven">
