@@ -9,8 +9,8 @@ maven.xdoc.locale.default=en
 maven.scm.svn.tag.base=https://svn.sourceforge.net/svnroot/joda-time/tags
 maven.changelog.factory=org.apache.maven.svnlib.SvnChangeLogFactory
 
-maven.compile.target=1.3
-maven.compile.source=1.3
+maven.compile.target=1.4
+maven.compile.source=1.4
 
 maven.checkstyle.properties=checkstyle.xml
 maven.junit.fork=true
